mathops: add element-wise operations

--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsDKmlf7b3iCjEFqT+NUBK",
+      "authorship_tag": "ABX9TyPjK05XOf1rolRViW0fDjTG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -934,10 +934,402 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 2. Element wise operation"
+      ],
+      "metadata": {
+        "id": "zsMDi-ABtF5l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = torch.rand(2,3)\n",
+        "b = torch.rand(2,3)\n",
+        "\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GEOQAr7itNED",
+        "outputId": "6dd69864-4074-41a0-dca0-63ceb10d7ca1"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.2380, 0.3129, 0.2067],\n",
+            "        [0.2775, 0.6398, 0.2120]])\n",
+            "tensor([[0.9378, 0.8752, 0.1334],\n",
+            "        [0.6275, 0.9894, 0.4620]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# add\n",
+        "a + b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "drYfwiDktOOe",
+        "outputId": "31d08174-be9f-4784-ff99-3831b8574c92"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.1758, 1.1881, 0.3401],\n",
+              "        [0.9050, 1.6292, 0.6740]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# sub\n",
+        "a - b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TilD90gktXkp",
+        "outputId": "e4e1ce33-9d2f-49ff-a3b7-5e3c5a1d776b"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.6997, -0.5623,  0.0733],\n",
+              "        [-0.3500, -0.3496, -0.2499]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# multiply\n",
+        "a * b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "whCTSWQbtmVn",
+        "outputId": "eaa35b2e-5c66-494d-c0a6-82ca77c63e59"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2232, 0.2739, 0.0276],\n",
+              "        [0.1741, 0.6330, 0.0980]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# division\n",
+        "a / b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ggFPwzGLtni2",
+        "outputId": "101379a9-332b-4208-c243-18dc6d31dd14"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2538, 0.3575, 1.5496],\n",
+              "        [0.4423, 0.6467, 0.4590]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# power\n",
+        "a ** b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HwE2XBX9toYJ",
+        "outputId": "35c63d38-f9c0-46fb-ebfb-c4ebdb3f6715"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2603, 0.3617, 0.8104],\n",
+              "        [0.4474, 0.6428, 0.4885]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# mod\n",
+        "a % b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mYL94_DTtpwE",
+        "outputId": "01a5a60b-ce8c-42d2-a2df-3a4ddb5790e7"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2380, 0.3129, 0.0733],\n",
+              "        [0.2775, 0.6398, 0.2120]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = torch.tensor([1, -2, 3, -4])"
+      ],
+      "metadata": {
+        "id": "bDhd0DpntsVY"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# abs\n",
+        "torch.abs(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ECtxkFcgt6zV",
+        "outputId": "251c3596-7a47-4017-818d-71fb11ecb742"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# negative\n",
+        "torch.neg(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eJWQPNKEus1H",
+        "outputId": "ee9a3cbe-ed31-4a5f-dd02-357dd3a0d719"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([-1,  2, -3,  4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = torch.tensor([1.9, 2.3, 3.7, 4.4])"
+      ],
+      "metadata": {
+        "id": "49uAkVhtuunB"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# round\n",
+        "torch.round(d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0C9okbwvuwlu",
+        "outputId": "5459d867-c6b2-41eb-adf3-270d3ded3f07"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([2., 2., 4., 4.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# floor\n",
+        "torch.floor(d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8V0glqGKuyPW",
+        "outputId": "5226310f-53d6-43df-92b3-669dedbac144"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1., 2., 3., 4.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ceil\n",
+        "torch.ceil(d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TuhcDQMNu7Ne",
+        "outputId": "d25166b4-3fd6-4aff-f688-cc2013501db2"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([2., 3., 4., 5.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# clamp\n",
+        "# values in certain range (2-3)\n",
+        "torch.clamp(d, min=2, max=3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QnRo2w4eu-WM",
+        "outputId": "8fc80573-f244-49a4-8f77-93fbe7b0b431"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([2.0000, 2.3000, 3.0000, 3.0000])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "KME7iL2EsdsD"
+        "id": "K-dIcit8vCeI"
       },
       "execution_count": null,
       "outputs": []
