mathops: add matrix operations

--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1L7fiwbTAD8cSzUY63bUH",
+      "authorship_tag": "ABX9TyMA8FphxaDryWNAthLE6oNg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yXbJ7WKLK03T",
-        "outputId": "f486a8c5-b955-41d8-bf58-9bc4b1442386"
+        "outputId": "59d7fdc9-c96e-4971-85e9-f93b410be2a3"
       },
       "outputs": [
         {
@@ -1737,6 +1737,227 @@
           },
           "metadata": {},
           "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4. Matrix operations"
+      ],
+      "metadata": {
+        "id": "L5RT9HRB5NkK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f = torch.randint(size=(2,3), low=0, high=5)\n",
+        "g = torch.randint(size=(3,2), low=0, high=5)\n",
+        "\n",
+        "print(f)\n",
+        "print(g)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LB5I-hM-5OX8",
+        "outputId": "c541ee7f-52cd-462a-84a6-c61091110bb5"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[4, 0, 3],\n",
+            "        [1, 4, 0]])\n",
+            "tensor([[4, 3],\n",
+            "        [4, 1],\n",
+            "        [1, 1]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# matrix multiplcation\n",
+        "torch.matmul(f, g)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N0mP57MVYFGR",
+        "outputId": "a20ce9b0-b2f1-4cde-90a6-2fb203170c08"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[19, 15],\n",
+              "        [20,  7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector1 = torch.tensor([1, 2])\n",
+        "vector2 = torch.tensor([3, 4])"
+      ],
+      "metadata": {
+        "id": "Q3bnQR-qYVPl"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dot product\n",
+        "torch.dot(vector1, vector2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ViHXO79mYxqB",
+        "outputId": "ede4d2ac-b1f1-46db-84d8-f3ad5d532fe0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(11)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# transpose\n",
+        "torch.transpose(f, 0, 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0r0acyODYzHd",
+        "outputId": "8aa88eb5-62d8-463e-d373-bc60da2ec71a"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[4, 1],\n",
+              "        [0, 4],\n",
+              "        [3, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h = torch.randint(size=(3,3), low=0, high=10, dtype=torch.float32)\n",
+        "h"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3BK8wLN4Z4YO",
+        "outputId": "b6fd1234-2a54-4c6d-8845-cd91b36c36ff"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 1.],\n",
+              "        [9., 0., 1.],\n",
+              "        [4., 4., 2.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# determinant\n",
+        "torch.det(h)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Cq06z3yaArH",
+        "outputId": "4c9d0470-53ea-40fd-c490-a7c02e040b2c"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(36.)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# inverse\n",
+        "torch.inverse(h)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "48KIKSi6aHbs",
+        "outputId": "36224607-b566-4a57-f08f-607e0136d483"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-0.1111,  0.1111,  0.0000],\n",
+              "        [-0.3889, -0.1111,  0.2500],\n",
+              "        [ 1.0000,  0.0000,  0.0000]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
         }
       ]
     }
