mathops: add comparison operations

--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA8FphxaDryWNAthLE6oNg",
+      "authorship_tag": "ABX9TyP2VRrm/WtjL9lODWDXzl6a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1958,6 +1958,213 @@
           },
           "metadata": {},
           "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 5. Comparison operations"
+      ],
+      "metadata": {
+        "id": "jWqvHJRpasth"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i = torch.randint(size=(2,3), low=0, high=10)\n",
+        "j = torch.randint(size=(2,3), low=0, high=10)\n",
+        "\n",
+        "print(i)\n",
+        "print(j)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pbwhI0B_atPh",
+        "outputId": "290cf25f-4f29-4642-d894-65256e914c8d"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1, 5, 6],\n",
+            "        [3, 2, 4]])\n",
+            "tensor([[0, 7, 5],\n",
+            "        [0, 5, 6]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# greater than\n",
+        "i > j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9EdndgFXb5V-",
+        "outputId": "3b06b07f-e2b5-46a3-9659-f89630a6b0cb"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ True, False,  True],\n",
+              "        [ True, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# less than\n",
+        "i < j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O_d7cDV_b81j",
+        "outputId": "c49cde20-f472-4351-a1af-c1cf28e2cf40"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[False,  True, False],\n",
+              "        [False,  True,  True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# equal to\n",
+        "i == j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V4FqCTfgb-vE",
+        "outputId": "95813f57-9f9f-4c85-8a96-3ba9ac23dd1a"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[False, False, False],\n",
+              "        [False, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# not equal to\n",
+        "i != j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bg-OntzmcAyK",
+        "outputId": "b2470601-20df-41f7-c27d-e0ddb27bea27"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[True, True, True],\n",
+              "        [True, True, True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# greater than equal to\n",
+        "i >= j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QtXrGCttcIVS",
+        "outputId": "07e781a7-2352-4811-b01d-8621e56824b8"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ True, False,  True],\n",
+              "        [ True, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# less than equal to\n",
+        "i <= j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tc1M_NEUcbOF",
+        "outputId": "fc79067a-fecf-4b3b-8c3b-49d25640bfed"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[False,  True, False],\n",
+              "        [False,  True,  True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
         }
       ]
     }
