--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2VRrm/WtjL9lODWDXzl6a",
+      "authorship_tag": "ABX9TyMGraO3O548bDFWq/LKZgGu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2165,6 +2165,185 @@
           },
           "metadata": {},
           "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Inplace Operations"
+      ],
+      "metadata": {
+        "id": "5EKudRwVewNU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m = torch.rand(2,3)\n",
+        "n = torch.rand(2,3)\n",
+        "\n",
+        "print(m)\n",
+        "print(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g3L_WjKAexNn",
+        "outputId": "df9bc141-6817-4ba8-a365-c541395c9b9b"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.2029, 0.0607, 0.9190],\n",
+            "        [0.2250, 0.6325, 0.1608]])\n",
+            "tensor([[0.3704, 0.8230, 0.7857],\n",
+            "        [0.4297, 0.6908, 0.3671]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# store result in m\n",
+        "# inplace changes\n",
+        "m.add_(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SDuEgyrzeyLl",
+        "outputId": "5e0a0db7-6fe1-44d1-fd2d-f8716decae04"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5734, 0.8837, 1.7047],\n",
+              "        [0.6547, 1.3233, 0.5280]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# original tensor m is updated\n",
+        "m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W1Kgxn3re3uC",
+        "outputId": "f6d1271a-248f-4617-8d03-fd7d9f7bf2a4"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5734, 0.8837, 1.7047],\n",
+              "        [0.6547, 1.3233, 0.5280]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# value stored in a new tensor and in memory\n",
+        "# problematic for large dataset\n",
+        "torch.relu(m)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9pIArKZRe517",
+        "outputId": "862e31aa-1faa-41d9-a5a7-5f764c91f2c9"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5734, 0.8837, 1.7047],\n",
+              "        [0.6547, 1.3233, 0.5280]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m.relu_()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lI0lOcGHe8G-",
+        "outputId": "0cace2c5-b9c6-4c9a-ffa6-4c9055f51356"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5734, 0.8837, 1.7047],\n",
+              "        [0.6547, 1.3233, 0.5280]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "88l-hM3wfyIE",
+        "outputId": "2eabf764-c63d-478b-bca3-c74a2c1910f0"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5734, 0.8837, 1.7047],\n",
+              "        [0.6547, 1.3233, 0.5280]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
         }
       ]
     }
