--- a/tensors_in_pytorch.ipynb
+++ b/tensors_in_pytorch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGraO3O548bDFWq/LKZgGu",
+      "authorship_tag": "ABX9TyNQTfU5Pcxm+qAMa0ImkKtz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2346,6 +2346,298 @@
           "execution_count": 40
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Copying a Tensor"
+      ],
+      "metadata": {
+        "id": "FK787p8AhjDk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = torch.rand(2,3)\n",
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XFNXzP_9hrD_",
+        "outputId": "d300a943-6deb-4a53-a4fa-06b66dfce733"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.9952, 0.6116, 0.1145],\n",
+              "        [0.4705, 0.2970, 0.0198]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = a\n",
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m_hEJs7Ahsao",
+        "outputId": "42b1e791-a035-4fde-b7c9-37c2cb9fd7da"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.9952, 0.6116, 0.1145],\n",
+              "        [0.4705, 0.2970, 0.0198]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[0,0] = 0"
+      ],
+      "metadata": {
+        "id": "7Tlc2SuXht1h"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6-et9dSEhyKJ",
+        "outputId": "d0ceb30f-1a21-41d0-c3b5-50b7125afe47"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.0000, 0.6116, 0.1145],\n",
+              "        [0.4705, 0.2970, 0.0198]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DOL9qMJqhyig",
+        "outputId": "9aed7b31-3742-4fd8-a70b-28ff4cc91ad6"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "133953570367808"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NvnZ_Dzdh1bd",
+        "outputId": "2fe2dd18-7ed5-4e76-8f5d-7b50d68fa90a"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "133953570367808"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = a.clone()"
+      ],
+      "metadata": {
+        "id": "PVMZ04F-h2Hc"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[0][0] = 10"
+      ],
+      "metadata": {
+        "id": "-l_BdSS9h4YK"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O6SD_Xlch6Zn",
+        "outputId": "b329b078-5b74-4ce6-e576-002f575803ba"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[10.0000,  0.6116,  0.1145],\n",
+              "        [ 0.4705,  0.2970,  0.0198]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jWyisc3nh6yH",
+        "outputId": "c83add1f-35d7-4111-f0c2-5d1aa230f179"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.0000, 0.6116, 0.1145],\n",
+              "        [0.4705, 0.2970, 0.0198]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D5A8SE2mh7MK",
+        "outputId": "5636fddf-b143-4abc-9266-0542529755b8"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "133953570367808"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3OH0Q_uch9Di",
+        "outputId": "ba309825-4b9b-4b83-9d35-f5baa0cb01a1"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "133953252303296"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eBJzrxnPh-Ow"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
